[package]
name = "tlsh2"
version = "0.1.0"
edition = "2021"
description = "A rust implementation of the TLSH algorithm"
repository = "https://github.com/vthib/tlsh"
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
keywords = ["tlsh", "hash", "digest", "similarity"]
categories = ["algorithms"]

[dev-dependencies]
glob = "0.3.0"
