[package]
name = "tlsh2"
version = "0.3.0"
edition = "2021"
description = "A rust implementation of the TLSH algorithm"
repository = "https://github.com/vthib/tlsh"
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
keywords = ["tlsh", "hash", "digest", "similarity"]
categories = ["algorithms"]

[features]
# Enable ability to compute diff score between two TLSH.
# This is behind a feature flag as it adds a 64k static array to the binary.
diff = []
# Enable joint lookup for faster Pearson hashing.
# This is behind a feature flag as it adds a 64k static array to the binary.
fast = []

[dev-dependencies]
glob = "0.3.0"

[package.metadata.docs.rs]
features = ["diff"]
